--- a/src/main/resources/com/example/final6205/sample.fxml
+++ b/src/main/resources/com/example/final6205/sample.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="395.0" prefWidth="301.0" spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="com.example.final6205.Controller">
-    <Button fx:id="encryptButton" onAction="#onEncryptButtonClick" text="Encrypt" />
+<VBox alignment="CENTER_LEFT" spacing="10" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.final6205.Controller">
+   <ImageView fitHeight="200.0" fitWidth="374.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@images%20(1).jpeg" />
+      </image>
+   </ImageView>
+    <Button fx:id="encryptButton" onAction="#onEncryptButtonClick" text="Encrypt" textAlignment="JUSTIFY" />
     <Button fx:id="decryptButton" onAction="#onDecryptButtonClick" text="Decrypt" />
-    <Button fx:id="historyButton" layoutX="300" layoutY="250" onAction="#onHistoryButtonClick" text="View History" />
-   <Button fx:id="recentButton" mnemonicParsing="false" onAction="#onRecentButtonClick" text="RecentFile" />
-   <Button fx:id="RankButton" mnemonicParsing="false" onAction="#onRankButtonClick" text="RankFile" />
+    <Button fx:id="historyButton" layoutX="300" layoutY="250" onAction="#onHistoryButtonClick" text="Whole File" />
+   <Button fx:id="recentButton" mnemonicParsing="false" onAction="#onRecentButtonClick" text="Rank by size" />
+   <Button fx:id="RankButton" mnemonicParsing="false" onAction="#onRankButtonClick" text="Recent File" />
 </VBox>
